Fix font family problem - adding comas to separate different families, rest is more or less ok

--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,6 +1,6 @@
 .odd-numbered {
     background-color:rgb(255,167,167);
-    font-family: "verdana" "DejaVu Sans" sans-serif;
+    font-family: Verdana, "DejaVu Sans", sans-serif;
 }
 #first-div {
     color:rgb(0,0,255);
