--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -14,6 +14,7 @@ body {
   background: #e3f4ff;
   margin:0;
   padding:10px;
+  font-size: 16px;
 }
 
 .content {
@@ -24,7 +25,6 @@ body {
 
 .button-container {
   background: #e3f4ff;
-  display:block;
   padding:10px;
   text-align: center;
 }
@@ -34,5 +34,5 @@ button {
   border: 1px solid #eee;
   display:block;
   margin: 0 auto;
-  padding:10px;
+  padding:10px 24px;
 }
