--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,15 @@
+* {
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+}
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  padding:10px;
 }
 
 .logo {
@@ -10,13 +19,20 @@
   background: white;
   padding: 4px 32px;
 }
+.left-links {
+  position:relative;
+  justify-content: flex-start;
+}
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display:flex;
+  gap:10px;
 }
 
 a {
+  flex-grow:1;
   font-size: 22px;
   background: white;
   padding: 8px;
