--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -46,3 +46,19 @@ a {
 ul {
   list-style-type: none;
 }
+
+/* changes */
+
+
+.header {
+  display:flex;
+  gap: 16px;
+  padding:8px;
+  align-items: center;
+}
+ul {
+  padding:0;
+  display:flex;
+  gap:16px;
+  margin-right: auto;
+}
