--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -24,3 +24,24 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+
+body {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  gap:32px;
+}
+.plants {
+  display:flex;
+  gap:52px;
+}
+.container {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  width:200px;
+}
+.text {
+  text-align: center;
+}
