--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -64,3 +64,25 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+/* solution */
+.modal {
+  display:flex;
+  padding:1em;
+  gap:1em;
+}
+.icon {
+  flex-shrink: 0;
+}
+.header-section {
+  display:flex;
+  justify-content: space-between;
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 0.5em;
+}
+.button-section {
+  margin-top: 0.5em;
+  display:flex;
+  gap:0.5em;
+}
