--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -77,6 +77,7 @@ button.cancel {
 .header-section {
   display:flex;
   justify-content: space-between;
+  align-items: center;
   font-size: 20px;
   font-weight: bold;
   margin-bottom: 0.5em;
