--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -25,3 +25,53 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+/* solution */
+* {
+  padding:0;
+  margin:0;
+}
+a {
+  text-decoration: none;
+  color:black;
+}
+
+ul {
+  list-style-type: none;
+}
+
+body {
+  font-size: 18px;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.header {
+  display:flex;
+  justify-content: space-between;
+ padding:1em;
+}
+
+ul {
+  display:flex;
+  gap:1em;
+}
+
+.content {
+  align-self: center;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer {
+ padding: 1em;
+ display: flex;
+ justify-content: space-between;
+ background-color: #eee
+}
+button {
+  padding:.5em;
+  font-size: 16px;
+}
