--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -47,6 +47,9 @@ body {
   justify-content: space-between;
 }
 
+
+
+.footer,
 .header {
   display:flex;
   justify-content: space-between;
@@ -63,14 +66,13 @@ ul {
   display:flex;
   flex-direction: column;
   align-items: center;
+  gap:1em;
 }
 
 .footer {
- padding: 1em;
- display: flex;
- justify-content: space-between;
  background-color: #eee
 }
+
 button {
   padding:.5em;
   font-size: 16px;
