--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -27,3 +27,59 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
 }
+
+/* solution  */
+* {
+  padding:0;
+  margin:0;
+  box-sizing: border-box;
+}
+
+.header {
+  font-size: 32px;
+  font-weight: 900;
+  display: flex;
+  align-items: center;
+  padding: 16px;
+}
+a{
+  text-decoration: none;
+  color:white;
+  font-size: 24px;
+}
+li {
+  margin-bottom: 1em;
+}
+body {
+  display:flex;
+  flex-direction: column;
+}
+
+.main {
+  flex:1;
+  display:flex;
+}
+.container {
+  display:flex;
+  flex-wrap: wrap;
+  padding:32px;
+  gap:32px;
+}
+.card {
+  padding:1em;
+  flex-grow: 1;
+  flex-basis: 300px;
+}
+.sidebar {
+  flex-shrink: 0;
+  padding: 16px;
+}
+.sidebar>ul {
+  list-style-type: none;
+}
+
+.footer {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
